fix misalignment on comments marked as answer

--- a/assets/styles/frontend/_forum.scss
+++ b/assets/styles/frontend/_forum.scss
@@ -162,8 +162,6 @@
 
     &.answer {
         background-color: rgba(0, 255, 0, 0.07);
-        margin: 0 calc(-1 * var(--spacing-4));
-        padding: var(--spacing-4);
     }
 }
 
